Added link + simplified props pass

--- a/src/info/Projects.json
+++ b/src/info/Projects.json
@@ -15,7 +15,7 @@
         "description": "Password Management App",
         "link": {
             "title": "Github",
-            "link": "",
+            "href": "https://github.com/jerikjakobsen/Keys",
             "icon": ""
         }
     }
