--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.3",
     "react-markdown": "^8.0.6",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "remarkable": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
