--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.3",
     "react-markdown": "^8.0.6",
+    "react-measure": "^2.5.2",
     "react-pdf": "^7.1.2",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
