--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.3",
-    "react-markdown": "^8.0.6",
+    "react-markdown": "^8.0.7",
     "react-measure": "^2.5.2",
     "react-pdf": "^7.1.2",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^3.0.1",
     "remarkable": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
